# yourbench

./: .env.template  .gitignore  Makefile  PREVIEW.md  QUICK_START.md  README.md  index.json  ingested.jsonl  pyproject.toml  requirements.txt  test_doc.txt  test_quick_config.py
.github/workflows/: ci.yaml  codeql.yml  quality.yaml  trufflehog.yml
analysis/: eps_tuning_report.md  reweight_and_deduplication.ipynb
configs/: example.yaml  mini_example.yaml  minimal.yaml
docs/: COLUMNS_DESCRIPTION.md  COLUMNS_DESCRIPTIONS.md  CONFIGURATION.md  CONTRIBUTING.md  CUSTOM_SCHEMAS.md  DATASET_COLUMNS_DESCRIPTION.md  FAQ.md  INFERENCE_ENGINE.md  PRINCIPLES.md  README.md  USING_OPENAI_COMPATIBLE_MODELS.md  chunking.md  configuration.md  question_generation.md
docs/academic/: README.md
example/: README.md
example/aws_support_documentation/: config.yaml  get_data.sh
example/childrens_books/: config.yaml
example/configs/: advanced_example.yaml  example.yaml  llm_pdf_ingestion.yaml  prompt_examples.yaml  simple_example.yaml
example/custom_prompts/: my_custom_prompt.md
example/default_example/: README.md  config.yaml
example/generate_questions_from_docs/: README.md  config.yaml
example/grade_school_questions/: download_data.sh
example/harry_potter_quizz/: README.md  config.yaml
example/local_vllm_private_data/: README.md  config.yaml
example/mckinsey_global_report/: config.yaml
example/rich_pdf_extraction_with_gemini/: README.md  config.yaml
examples/agriculture/: 112512.md  112522.md  112562.md  112572.md  112611.md  112616.md  112704.md  113606.md  113634.md  114188.md  114323.md  114343.md  114346.md  114351.md  114508.md  114920.md  114922.md  114942.md  115285.md  115492.md  115549.md  115690.md  115838.md  115864.md  115870.md  115874.md  115893.md  115907.md  116178.md  116644.md  118277.md  121938.md  121996.md  122159.md  122219.md  122278.md  122367.md  122433.md  122677.md  122691.md  (+49 more)
src/: main.py
src/data_processing/: chunk_raw_data.py  deduplicate_data.py  make_dataset.py  make_multihop_preparings.py
src/generation/: generate_multihop_questions.py  generate_multihop_questions_local.py  generate_single_shot_questions.py  generate_single_shot_questions_local.py  generate_single_shot_questions_sglang.py  generate_single_shot_questions_sglang_2.py
src/models/: integrative_qa_pair.py
src/processing/: generate_multihop_pairings.py
src/utils/: file_utilities.py  inference_engine.py  log_processor.py  merge_equivalent_datasets.py  standard_utilities.py
src/visualizations/: multihop_questions.ipynb  successful_json_generation_rate.py
src/yourbench/: main.py
task_configs/agriculture/: config.yaml
task_configs/gpt4_test/: config.yaml
task_configs/llama_405b/: config.yaml
task_configs/quant_answers/: config.yaml
task_configs/qwen_72b/: config.yaml
task_configs/r1_answers/: config.yaml
task_configs/r1_debug/: config.yaml
task_configs/r1_test/: config.yaml
task_configs/test_simple_dataset/: config.yaml
task_configs/y1/: config.yaml
task_configs/yourbench_y1/: config.yaml
task_configs/yourbench_y1_preview/: config.yaml
test_output/: index.json  ingested.jsonl
tests/integration/: test_config_system.py  test_pipeline.py
tests/unit/: test_citation_score_filtering.py  test_comb.py  test_config_builder.py  test_config_edge_cases.py  test_configuration_engine.py  test_custom_schemas_comprehensive.py  test_dataset_engine.py  test_field_normalization.py  test_hydra_config.py  test_inference_core.py  test_question_generation_wrappers.py  test_question_rewriting_fixes.py  test_question_schema_system.py  test_question_schemas.py  test_schema_loader.py  test_schema_pipeline_integration.py  test_schema_prompt_generator.py  test_schema_validation.py  test_url_utils.py  test_utf8_ingestion.py
yourbench/: __main__.py  app.py  config_builder.py  config_cache.py  gradio.py  interactive_wizard.py  main.py  ui.py
yourbench/analysis/: __init__.py  view_sample_questions.py
yourbench/conf/: loader.py  prompts.py  schema.py
yourbench/config/: pipeline_steps.py
yourbench/interface/: frontend.py
yourbench/judge/: judge_answers.py
yourbench/models/: single_shot_question.py
yourbench/pipeline/: __init__.py  _handler.py  answer_generation.py  chunking.py  citation_score_filtering.py  cross_document_question_generation.py  deduplicate_multi_hop_questions.py  deduplicate_single_hop_questions.py  deduplicate_single_shot_questions.py  handler.py  ingestion.py  judge_answers.py  lighteval.py  multi_hop_question_generation.py  prepare_lighteval.py  question_generation.py  question_rewriting.py  rewriting.py  single_hop_question_generation.py  single_shot_question_generation.py  summarization.py  upload_ingest_to_hub.py
yourbench/postprocessing/: clustering.py  reformat_dataset_for_judge.py  reweight_and_deduplication.py
yourbench/preprocessing/: create_chunks.py  create_multihop_chunks.py  dataset_generation.py  generate_summaries.py
yourbench/prompts/: README.md
(+302 files in other folders)
