[project]
name = "yourbench"
version = "0.2.0"
description = "Dynamic Evaluation Set Generation with Large Language Models"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "asyncio>=3.4.3",
    "bert-score>=0.3.13",
    "black>=25.1.0",
    "click>=8.1.7",
    "datasets>=3.3.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.28.1",
    "langfuse>=2.59.3",
    "litellm>=1.61.16",
    "loguru>=0.7.3",
    "markitdown>=0.0.2",
    "matplotlib>=3.10.0",
    "openai>=1.63.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
    "typer>=0.15.2",
]

[project.scripts]
yourbench = "yourbench.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["yourbench*"]
